Added examples to read me
darcs-hash:20051114153138-3cc5d-7a008bcbcd10e9a360c07f679a6d9fc5211f8863.gz

--- a/dev/README
+++ b/dev/README
@@ -1,3 +1,5 @@
+### Introduction
+
 CL-HTTP-PARSE is a slash and burn port of Franz's phtml HTML parser.
 
 I made a few small changes to the source mainly involving the call to
@@ -5,5 +7,32 @@ excl:intern* in collect-tag. In particular, all tags are now string-upcased
 before being interned. There is probably a better solution but I'm not 
 very Allegro savvy.
 
-Any questions or concerns should be directed to me, Gary Warrne King at
+Any questions or concerns should be directed to me, Gary Warren King at
 gwking@metabang.com.
+
+
+### Example #1
+
+(html-parse:parse-html 
+ "<html>
+<head><title>Parsing HTML is Phun</title></head>
+<body>
+<h1>Why is it phun?</h1>
+<p>Parsing HTML is phun because angle brackets are better than parentheses.</p>
+</body>
+</html>")
+
+==> 
+
+((:HTML (:HEAD (:TITLE "Parsing HTML is Phun"))
+  (:BODY (:H1 "Why is it phun?")
+   (:P
+    "Parsing HTML is phun because angle brackets are better than parentheses."))))
+
+### Example #2
+
+(html-parse:parse-html <file>)
+
+==> ((:HTML ...))
+     
+    
